# GBMU

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: rust.yml
crates/apu/: Cargo.toml
crates/apu/src/: apu.rs  channel.rs  interface.rs  lib.rs  player.rs  sound.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: area.rs  arithmetic.rs  bus.rs  consts.rs  cpu.rs  executor.rs  flags.rs  futures.rs  get_at.rs  interface.rs  lib.rs  logical.rs  nextpc.rs  opcodes.rs  pc.rs  reader.rs  registers.rs  runner.rs  shift.rs
crates/cpu/src/cpu/: area.rs  flags.rs  opcodes.rs  pc.rs  registers.rs
crates/cpu/src/cpu/opcodes/: alu_16bits.rs  alu_8bits.rs  bit_operations.rs  calls.rs  jumps.rs  loadreg1reg2.rs  loadreganum8bit.rs  loadregnum8bit.rs  loads_16bits.rs  loads_8bits.rs  miscellaneous.rs  restart.rs  returns.rs  rotates_shifts.rs
crates/cpu/src/futures/: calcul.rs  cb.rs  get.rs  getat.rs  jump.rs  load.rs  load_data.rs  nextpc.rs  set.rs  setat.rs  setters.rs  stack.rs
crates/cpu/src/opcodes/: add_a_8b.rs  add_reg_a.rs  add_reg_hl.rs  add_reg_sp.rs  alu.rs  and_reg_a.rs  arithmetic.rs  arithmetic16b.rs  arithmetics.rs  arithmetics_functions.rs  bits8.rs  bitset.rs  call.rs  cb_operation.rs  cmp_reg_a.rs  complement_carry_flag.rs  complement_reg_a.rs  consts.rs  control.rs  daa_reg_a.rs  data.rs  dec_r.rs  decode.rs  decrement.rs  decrement_u16.rs  decrement_u8.rs  hl_8b_inst.rs  increment_u16.rs  increment_u8.rs  jump.rs  load.rs  load16b.rs  load_16b_reg_sp.rs  load_a_hl_minus.rs  load_a_hl_plus.rs  load_a_mem_c.rs  load_bcde_reg_a.rs  load_hl_8b.rs  load_hl_minus_a.rs  load_hl_plus_a.rs  (+38 more)
crates/cpu/src/opcodes/bits8/: load.rs  load_register.rs
crates/cpu/src/opcodes/data/: arithmetic.rs  consts.rs  logical.rs
crates/cpu/src/opcodes/prefix_cb/: consts.rs  reset_bit.rs  rotate_left.rs  rotate_right.rs  set_bit.rs  shift_left.rs  shift_right.rs  shift_right_logical.rs  swap.rs  test_bit.rs
crates/cpu/src/registers/: area.rs  arithmetic.rs  bitwise.rs  bus.rs  complement.rs  flags.rs  futures.rs  incdec.rs  jump.rs  load.rs  logical.rs  rotation.rs  shift.rs
crates/cpu/src/registers/futures/: async.rs  calcul.rs  cb.rs  get.rs  getat.rs  jump.rs  load.rs  load_data.rs  nextpc.rs  reader.rs  set.rs  setat.rs  setters.rs  stack.rs
crates/debugger/: Cargo.toml
crates/debugger/examples/: run_debugger.rs
crates/debugger/src/: debugger.rs  lib.rs
crates/debugger/src/components/: register.rs
crates/debugger/src/widgets/: hexdump.rs
crates/debugger/src/widgets/hexdump/: consts.rs  renderer.rs  state.rs  utils.rs
crates/gb-apu/: Cargo.toml
crates/gb-apu/src/: channel.rs
crates/gb-roms/: Cargo.toml
crates/gb-soc/: Cargo.toml
crates/gb-soc/src/: lib.rs  soc.rs
crates/gbmu/: Cargo.toml
crates/gbmu/src/: main.rs  old_main.rs
crates/gui/: Cargo.toml
crates/gui/src/: debugger.rs  fonts.rs  lib.rs  style.rs
crates/gui/src/debugger/: components.rs  memory.rs  theme.rs  ui.rs
crates/gui/src/debugger/components/: register.rs
crates/gui/src/debugger/ui/: memory.rs  register.rs  registers.rs
crates/gui/src/debugger/ui/registers/: cpu.rs  register.rs
crates/gui/src/style/: memory.rs  register.rs  register_data.rs  theme.rs
crates/gui/src/style/theme/: light.rs
crates/gui/src/theme/: dark.rs  light.rs
crates/gui/src/widgets/: hexdump.rs
crates/gui/src/widgets/hexdump/: consts.rs  renderer.rs  state.rs  style.rs
crates/interrupts/: Cargo.toml
crates/interrupts/src/: consts.rs  interrupt_enable.rs  interrupt_flag.rs  interrupts.rs  main.rs
crates/memory/: Cargo.toml
crates/memory/src/: area.rs  async.rs  bios.rs  bus.rs  consts.rs  futures.rs  header.rs  interface.rs  interrupts.rs  io.rs  joypad.rs  lib.rs  mbc.rs  memory.rs  new.rs  ppu.rs  ram.rs  rom.rs  serial.rs  state.rs  timer.rs  wram.rs
crates/ppu/: Cargo.toml
crates/ppu/src/: blanks.rs  colors.rs  consts.rs  cycle.rs  fifo.rs  futures.rs  interface.rs  lib.rs  oam.rs  ppu.rs  registers.rs  runner.rs  sprite.rs  tile.rs  transfert.rs  vram.rs
crates/ppu/src/futures/: fetch.rs  pop.rs  push.rs  write.rs
crates/ppu/src/registers/: control.rs  coordinates.rs  lcd.rs  palette.rs  status.rs
crates/ppu/src/registers/lcd/: position.rs
crates/ppu/src/transfert/: fetcher.rs  pixels.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  execute.rs  (+6 more)
crates/soc/: Cargo.toml
crates/soc/examples/: from_tetris.rs
crates/soc/src/: header.rs  interface.rs  lib.rs  mode.rs  processor.rs  runner.rs  soc.rs  status.rs  system.rs
crates/soc/src/header/: cartridge.rs  destination.rs  error.rs  newlicense.rs  oldlicense.rs  size.rs  title.rs
crates/sound/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: debugger.rs  emulator.rs  error.rs  lib.rs  style.rs  widgets.rs
crates/ui/src/debugger/: button.rs  cpu.rs  disassembler.rs  memory.rs  memory_map.rs  menu.rs  ppu.rs  register.rs  registers.rs  ui.rs  widgets.rs
crates/ui/src/debugger/cpu/: flags.rs  registers.rs
crates/ui/src/debugger/disassembler/: conversion.rs  disass.rs  header.rs  instruction.rs  jump.rs  load.rs  load16b.rs
crates/ui/src/debugger/memory/: bios.rs  view.rs
crates/ui/src/debugger/menu/: button.rs  line.rs  tick.rs
crates/ui/src/debugger/ppu/: control.rs  coordinates.rs  lcd.rs  palette.rs
crates/ui/src/debugger/registers/: cpu.rs  lcd.rs  ppu.rs  register.rs
crates/ui/src/debugger/ui/registers/: register.rs
crates/ui/src/debugger/widgets/: cell.rs  flag.rs  hexdump.rs  memory.rs  register.rs  text.rs
crates/ui/src/debugger/widgets/hexdump/: renderer.rs  state.rs
crates/ui/src/emulator/: ui.rs
crates/ui/src/style/: fonts.rs  register.rs  theme.rs
crates/ui/src/style/theme/: dark.rs  light.rs
crates/ui/src/widgets/hexdump/: consts.rs
crates/windows/: Cargo.toml
crates/windows/examples/: start_windows.rs
crates/windows/src/: debugger.rs  emulator.rs  lib.rs  windows.rs
gb-cpu/: Cargo.toml
gb-cpu/src/: cpu.rs  lib.rs
gb-memory/: Cargo.toml
gb-memory/src/: error.rs  lib.rs  memory.rs
gb-shared/: Cargo.toml
gb-soc/: Cargo.toml
gb-soc/src/: soc.rs
(+54 files in other folders)
