[package]
name = "cpu"
version = "0.1.0"
authors = ["Cedric M'Passi <cempassi@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
modular-bitfield = "0.11.2"
num_enum = "0.5.3"
memory = { path = "../memory" }
shared = { path = "../shared" }
