[package]
name = "debugger"
version = "0.1.0"
edition = "2018"
authors = [
  "Cedric M'Passi <cedricmpassi@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
glium = "*"
iced_native = "0.4"
iced_graphics = "0.2"
cpu = { path = "../cpu" }
