[package]
name = "gbmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { path = "../windows"}
soc = { path = "../soc"}
structopt = { version = "0.3"}
log = "0.4.14"
anyhow = "1.0.52"
pretty_env_logger = "0.4.0"
