[package]
name = "ppu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
num_enum = "0.5.3"
enum-iterator = "0.7.0"
derivative = "2.2.0"
byteorder = "1.3.4"
modular-bitfield = "0.11.2"
shared = { path = "../shared" }
