[package]
name = "soc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.3"
pretty-hex = "0.2.1"
memory = { path = "../memory" }
shared = { path = "../shared" }
cpu = { path = "../cpu" }
ppu = { path = "../ppu" }
