[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = [
  "Cedric M'Passi <cedricmpassi@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.7.0"
enum-iterator = "0.7.0"
num_enum = "0.5.3"
itertools = "0.10.1"
iced_wgpu = {git = "https://github.com/hecrj/iced", rev = "65f690b07559a36fe8bfcba31edd851c5c286704"}
iced_winit = {git = "https://github.com/hecrj/iced", rev = "65f690b07559a36fe8bfcba31edd851c5c286704"}
iced_native = {git = "https://github.com/hecrj/iced", rev = "65f690b07559a36fe8bfcba31edd851c5c286704"}
iced_graphics = {git = "https://github.com/hecrj/iced", rev = "65f690b07559a36fe8bfcba31edd851c5c286704"}
shared = { path = "../shared" }
soc = { path = "../soc" }
cpu = { path = "../cpu" }
ppu = { path = "../ppu" }
memory = { path = "../memory" }
