[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = [
  "Cedric M'Passi <cedricmpassi@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.7.0"
ascii = "1.0.0"
pretty-hex = "0.2.1"
enum-iterator = "0.7.0"
num_enum = "0.5.3"
itertools = "0.10.1"
iced_graphics = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
iced_native = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
iced_wgpu = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
iced = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
iced_winit = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
shared = { path = "../shared" }
soc = { path = "../soc" }
cpu = { path = "../cpu" }
ppu = { path = "../ppu" }
memory = { path = "../memory" }
