[package]
name = "windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.7.0"
gilrs = "0.8.1"
winit_input_helper = "0.10"
iced_wgpu = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
iced_winit = {git = "https://github.com/hecrj/iced", rev = "20177e423cd2bdc08f8060b31c379a6f764e3df6"}
ui = { path = "../ui" }
soc = { path = "../soc" }
shared = {path = "../shared" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
